# notes

./: README.md
configs/: README.md  smb.conf  tftpd-hpa  vsftpd.conf
docx/: 操作手册模板.docx
kernel/: busybox.sh  compile  gdb-linux.py  linux.sh  menu.sh  qemu.sh  rgdb.sh  zdx_defconfig
kernel/linux/: __init__.py  vm.py
linux/: README.md  arm.dts  drivers  drm.md  kernel  linux
linux/configs/: README.md  smb.conf  sshd-ext.conf  tftpd-hpa  vsftpd.conf
linux/pic/: README.md
linux/scripts/: README.md  build_all.sh  find-linux-headers.sh  linux.sh
markdown/: README.md
meson/: config.sh  meson.build
meson/configs/: aarch64.cfg  clang-cross.cfg  clang.cfg  gcc-cross.cfg  gcc.cfg  riscv.cfg
meson/scripts/: files.sh
openbmc/: openbmc.docx
program/: Makefile  python  操作系统  数据结构  算法  编译原理  网络
putty/: putty  putty.txt
